AUI-1903 Fixing odd behavior on small screens

--- a/src/aui-form-builder/assets/aui-form-builder-core.css
+++ b/src/aui-form-builder/assets/aui-form-builder-core.css
@@ -207,7 +207,6 @@
 .form-builder-empty-col {
     cursor: pointer;
     height: 100%;
-    position: relative;
     text-align: center;
 }
 
